Gen_Parsing/KtlynsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Ktlyns.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

 
	using Kat; 
	using System.Collections.Generic;
	
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class KtlynsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, WS=3, DEC=4, INT=5, PLUS=6, MINUS=7, SLASH=8, STAR=9, 
		AMP=10, STR=11, LPRN=12, RPRN=13, LBRC=14, RBRC=15, LARR=16, RARR=17, 
		COMMA=18, DOT=19, SDOT=20, EQ=21, IF=22, ELSE=23, AT=24, RET=25, AND=26, 
		OR=27, NOT=28, EQEQ=29, NEQEQ=30, GREAT=31, EQGREAT=32, LESS=33, EQLESS=34, 
		METHOD=35, EXTERNAL=36, ID=37, COMMENT=38, LINE_COMMENT=39;
	public const int
		RULE_program = 0, RULE_block = 1, RULE_statements = 2, RULE_statement = 3, 
		RULE_var_decl = 4, RULE_mth_decl = 5, RULE_ex_mth_decl = 6, RULE_mth = 7, 
		RULE_expr = 8, RULE_unary = 9, RULE_number = 10, RULE_string = 11, RULE_id = 12, 
		RULE_call_args = 13, RULE_mth_decl_arg = 14;
	public static readonly string[] ruleNames = {
		"program", "block", "statements", "statement", "var_decl", "mth_decl", 
		"ex_mth_decl", "mth", "expr", "unary", "number", "string", "id", "call_args", 
		"mth_decl_arg"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", null, null, null, "'+'", "'-'", "'/'", "'*'", "'&'", 
		null, "'('", "')'", "'{'", "'}'", "'<'", "'>'", "','", "'.'", "';'", "'='", 
		"'if'", "'else'", "'@'", "'ret'", "'and'", "'or'", "'not'", "'equals'", 
		"'not equals'", "'great'", "'eq great'", "'less'", "'eq less'", "'method'", 
		"'ext'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "WS", "DEC", "INT", "PLUS", "MINUS", "SLASH", "STAR", 
		"AMP", "STR", "LPRN", "RPRN", "LBRC", "RBRC", "LARR", "RARR", "COMMA", 
		"DOT", "SDOT", "EQ", "IF", "ELSE", "AT", "RET", "AND", "OR", "NOT", "EQEQ", 
		"NEQEQ", "GREAT", "EQGREAT", "LESS", "EQLESS", "METHOD", "EXTERNAL", "ID", 
		"COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Ktlyns.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static KtlynsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KtlynsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KtlynsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public KBlock Block;
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
	 
		public BlockContext() { }
		public virtual void CopyFrom(BlockContext context) {
			base.CopyFrom(context);
			this.Block = context.Block;
		}
	}
	public partial class RBlockEmptyContext : BlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRC() { return GetToken(KtlynsParser.LBRC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRC() { return GetToken(KtlynsParser.RBRC, 0); }
		public RBlockEmptyContext(BlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRBlockEmpty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRBlockEmpty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRBlockEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RBlockStmtsContext : BlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRC() { return GetToken(KtlynsParser.LBRC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRC() { return GetToken(KtlynsParser.RBRC, 0); }
		public RBlockStmtsContext(BlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRBlockStmts(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRBlockStmts(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRBlockStmts(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			State = 38;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				_localctx = new RBlockStmtsContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 32;
				Match(LBRC);
				State = 33;
				statements();
				State = 34;
				Match(RBRC);
				}
				break;
			case 2:
				_localctx = new RBlockEmptyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 36;
				Match(LBRC);
				State = 37;
				Match(RBRC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementsContext : ParserRuleContext {
		public KBlock Block;
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterStatements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitStatements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementsContext statements() {
		StatementsContext _localctx = new StatementsContext(Context, State);
		EnterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 40;
				statement();
				}
				}
				State = 43;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEC) | (1L << INT) | (1L << MINUS) | (1L << AMP) | (1L << STR) | (1L << LPRN) | (1L << RET) | (1L << METHOD) | (1L << EXTERNAL) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public KStmt Stmt;
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
			this.Stmt = context.Stmt;
		}
	}
	public partial class RStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SDOT() { return GetToken(KtlynsParser.SDOT, 0); }
		public RStatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementVarDeclContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext var_decl() {
			return GetRuleContext<Var_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SDOT() { return GetToken(KtlynsParser.SDOT, 0); }
		public RStatementVarDeclContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementMthDeclContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Mth_declContext mth_decl() {
			return GetRuleContext<Mth_declContext>(0);
		}
		public RStatementMthDeclContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementMthDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementExMthDeclContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Ex_mth_declContext ex_mth_decl() {
			return GetRuleContext<Ex_mth_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SDOT() { return GetToken(KtlynsParser.SDOT, 0); }
		public RStatementExMthDeclContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementExMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementExMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementExMthDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 55;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new RStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 45;
				expr(0);
				State = 46;
				Match(SDOT);
				}
				break;
			case 2:
				_localctx = new RStatementVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 48;
				var_decl();
				State = 49;
				Match(SDOT);
				}
				break;
			case 3:
				_localctx = new RStatementMthDeclContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 51;
				mth_decl();
				}
				break;
			case 4:
				_localctx = new RStatementExMthDeclContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 52;
				ex_mth_decl();
				State = 53;
				Match(SDOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_declContext : ParserRuleContext {
		public KStmt Stmt;
		public Var_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_decl; } }
	 
		public Var_declContext() { }
		public virtual void CopyFrom(Var_declContext context) {
			base.CopyFrom(context);
			this.Stmt = context.Stmt;
		}
	}
	public partial class RVarDeclExprContext : Var_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(KtlynsParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public RVarDeclExprContext(Var_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRVarDeclExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRVarDeclExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRVarDeclExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RVarDeclContext : Var_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public RVarDeclContext(Var_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_declContext var_decl() {
		Var_declContext _localctx = new Var_declContext(Context, State);
		EnterRule(_localctx, 8, RULE_var_decl);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new RVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				id(0);
				State = 58;
				id(0);
				}
				break;
			case 2:
				_localctx = new RVarDeclExprContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				id(0);
				State = 61;
				id(0);
				State = 62;
				Match(EQ);
				State = 63;
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Mth_declContext : ParserRuleContext {
		public KStmt Stmt;
		[System.Diagnostics.DebuggerNonUserCode] public MthContext mth() {
			return GetRuleContext<MthContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPRN() { return GetToken(KtlynsParser.LPRN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Mth_decl_argContext mth_decl_arg() {
			return GetRuleContext<Mth_decl_argContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPRN() { return GetToken(KtlynsParser.RPRN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public Mth_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mth_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterMth_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitMth_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMth_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Mth_declContext mth_decl() {
		Mth_declContext _localctx = new Mth_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_mth_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			mth();
			State = 68;
			id(0);
			State = 69;
			Match(LPRN);
			State = 70;
			mth_decl_arg(0);
			State = 71;
			Match(RPRN);
			State = 72;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ex_mth_declContext : ParserRuleContext {
		public KStmt Stmt;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXTERNAL() { return GetToken(KtlynsParser.EXTERNAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MthContext mth() {
			return GetRuleContext<MthContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPRN() { return GetToken(KtlynsParser.LPRN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Mth_decl_argContext mth_decl_arg() {
			return GetRuleContext<Mth_decl_argContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPRN() { return GetToken(KtlynsParser.RPRN, 0); }
		public Ex_mth_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ex_mth_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterEx_mth_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitEx_mth_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEx_mth_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ex_mth_declContext ex_mth_decl() {
		Ex_mth_declContext _localctx = new Ex_mth_declContext(Context, State);
		EnterRule(_localctx, 12, RULE_ex_mth_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(EXTERNAL);
			State = 75;
			mth();
			State = 76;
			id(0);
			State = 77;
			Match(LPRN);
			State = 78;
			mth_decl_arg(0);
			State = 79;
			Match(RPRN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
